--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,3 +7,7 @@
 ## [0.1.1] - 2023-03-04
 
   * Minor clean up
+
+## [0.1.2] - 2023-03-07
+
+  * Minor touch up on error messages for migration failure
