updated change log accordingly

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,3 +11,7 @@
 ## [0.1.2] - 2023-03-07
 
   * Minor touch up on error messages for migration failure
+
+## [0.1.3] - 2023-03-07
+
+  * Added option -v for Citrine CLI to show version number
