--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,3 +15,7 @@
 ## [0.1.3] - 2023-03-07
 
   * Added option -v for Citrine CLI to show version number
+
+## [0.1.4] - 2023-03-07
+
+  * Fixed a bug in adding jobs when jobs are undefined
